# Santiy

./: .env.example  .gitignore  Makefile.am  _ide_helper.php  auth.cache  bootstrap.sh  composer.json  configure.ac  gulpfile.js  package.json  readme.md
app/Console/: Kernel.php
app/Console/Commands/: ClearMassEmailsLocks.php  CronFollowupsReminder.php  CronLicenseCheck.php  CronStatsUpdate.php  CronUpdateEmailCredits.php  CronUpdateExchangeRate.php  CronUpdatePaypalTransactions.php  SendEmails.php  UtilityRecalculateFilteredLeads.php  UtilityRecalculateTotalLeads.php
app/Exceptions/: Handler.php
app/Http/: Kernel.php  routes.php
app/Http/Controllers/: CommonController.php  Controller.php  CronJobController.php  HomeController.php  PublicHomeController.php
app/Http/Middleware/: Authenticate.php  RedirectIfAuthenticated.php  VerifyCsrfToken.php
app/Http/Requests/: SimpleRequest.php
app/Jobs/: SendApprovedTransaction.php  SendCustomEmail.php
app/Models/: Admin.php  AdminEmailTemplate.php  Appointment.php  CallBack.php  CallHistory.php  Campaign.php  CampaignMember.php  CampaignPrevNextFilter.php  DiscountCode.php  EmailTemplate.php  Form.php  FormFields.php  Formmapping.php  HelpArticle.php  HelpTopic.php  Landingform.php  Landingformfields.php  Lead.php  LeadAttachment.php  LeadCustomData.php  LeadInfoEmails.php  License.php  LicenseType.php  MassEmail.php  MassEmailTemplate.php  MassEmailsLock.php  PendingTransaction.php  PostalCode.php  PushMessage.php  SalesMember.php  Setting.php  SmtpSetting.php  TodoList.php  Transaction.php  User.php
app/Providers/: AppServiceProvider.php  AuthServiceProvider.php
bootstrap/: app.php
config/: app.php  auth.php  cache.php  debugbar.php  laravel-backup.php  services.php  session.php
database/migrations/: 2015_11_30_114655_setting_table.php  2015_12_04_042609_admin_settings_trial.php  2015_12_04_072603_create_trial_licence.php  2015_12_07_081247_admin_welcome_email.php  2015_12_07_083926_users_email_verification.php  2015_12_07_123016_trial_expired_template.php  2015_12_08_101743_users_login_count_and_trial_user_tracking.php  2015_12_16_052044_add_bss_user.php  2015_12_22_094920_mass_mail_template.php  2015_12_31_060357_admin_mass_mail_setting.php  2015_12_31_093645_alter_mass_email_template.php  2015_12_31_101032_email_credit_table.php  2016_01_04_100339_mass_mail_server_setting.php  2016_01_06_123547_create_email_send_table.php  2016_01_08_094314_alter_massemails.php  2016_01_09_041919_alter_massemails_add_postpone.php  2016_01_09_103506_alter_massemails_add_failed.php  2016_01_11_052528_alter_massmail_add_email_click_open.php  2016_01_11_101353_unsubscribe_emails.php  2016_01_12_030239_add_opened_on_massmail.php  2016_01_12_092805_add_subscriptionurl_bounce_delivered_status.php  2016_01_13_043200_alter_awsstatus.php  2016_01_18_114327_add_formfield_sequence.php  2016_01_18_165449_add_massmail_template.php  2016_01_19_063403_ad_landingform_sequence.php  2016_01_19_101938_add_massmail_template_callhistory.php  2016_01_19_111242_add_massmailID_callhistory.php  2016_01_22_112007_alter_massmail_settign.php  2016_01_28_053545_add_masstemplate_status.php  2016_01_28_071922_alter_massmail_template_settings.php  2016_02_15_162408_user_payment_info.php  2016_02_17_111349_alter_payment_info.php  2016_02_22_100005_alter_licencetypes.php  2016_02_28_155829_help_topic_url_config.php  2016_03_01_091712_statistics_share_custom_range.php  2016_03_04_101819_alter_transaction_add_CapacityDecrease.php  2016_03_08_051256_alter_transaction.php  2016_03_09_070049_alter_transcaction_addNextBillingInfo.php  2016_03_13_135543_alter_transaction_change_datatyoe.php  2016_03_15_073213_Add_failed_transaction_emailtemplate.php  (+62 more)
public/: .htaccess
public/assets/css/: bootstrap-override.css  custom.css  emailediting.css  jquery-ui-1.10.3.css  jquery.gritter.css  landingform.css  massmail.css  signup.css  start-campaigns.css  style.default.css
public/assets/fileman/: conf.json  memcached.inc.php  system.inc.php
public/assets/invoice/: paid.html
public/assets/js/: custom.js  custom_date_field.js  dashboard.js  landingJs.js
public/docs/: getting-started.html
public/img/: Thumbs.db
public/img_features/: Thumbs.db
public/payment/: Zoho Store.html
public/payment/Zoho Store_files/: bootstrap-select.min.css  drawchat.html  embedchatblack.css  floatchat.js  floatsupportbtn.css  wmsbridge.js  wmsconnector.html  zohostorecommonlist.min.css
public/payment/files/: bootstrap.min.css  float.ls  floatchat.css  getipinfo  gtm.js  jquery-ui-1.9.2.custom.min.css  payment.js  pconnect.html  properties.js  resource.js  tour-component.min.css  track.js  wmsliteapi.js  zohostorecommon.min.js  zohostorecommonlist.min.css  ztopbar.css
public/public_home/: about-us.html  appointment-setting.html  call-center-crm.html  contact.html  crm-webforms.html  email-tools.html  features.html  index.html  lead-distribution.html  lead-management.html  newsletter_error.html  newsletter_success.html  pricing.html  sales-campaigns.html  sales-pipeline.html  sales-tools-for-startups.html  support.html  testimonials.html  unsubscribe.html
public/public_home/css/: bootstrap.min.css  responsive.css  style.css
public/public_home/js/: analytics.js  currency.js  jquery.prettyPhoto.js  scripts.js
resources/assets/js/: lead-form-builder.js
resources/views/: Controller.php  base.blade.php  call_center_crm.blade.php  contact.blade.php  faq.blade.php  features.blade.php  homepage.blade.php  leadmanagement.blade.php  pricing.blade.php  pricing2.blade.php  pricing3.blade.php  sales_tools_for_startups.blade.php  sanityos.blade.php  signup.blade.php  unsubscribe.blade.php
resources/views/admin/: adminloginform.blade.php
resources/views/emails/: contact.blade.php  demo.blade.php  email.blade.php  massemail.blade.php  newsletter.blade.php
resources/views/errors/: 403.blade.php  404.blade.php  500.blade.php
resources/views/layouts/: admindashboard.blade.php  dashboard.blade.php  (+4 more)
server/etc/: smartd.conf
storage/meta/: htaccessData.txt
storage/paypal/: sdk_config.ini
(+187 files in other folders)
